# timelib

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE.md  README.md  _config.yml  index.md
.github/workflows/: documentation.yml  macos.yml  main.yml  ubuntu.yml  windows.yml
example/: example_cpp11.cpp  example_cpp98.cpp  example_stopwatch.cpp
examples/: example_cpp11.cpp  example_cpp98.cpp  example_stopwatch.cpp  example_timer.cpp
include/stopwatch/: details.hpp  duration.hpp  stopwatch.hpp  timer.hpp  timespec.hpp  timespec_support.hpp
include/timelib/: details.hpp  duration.hpp  stopwatch.hpp  timer.hpp  timespec.hpp  version.hpp
test/: CMakeLists.txt  test_stopwatch.cpp
